curtin (19.2-6-g88a1a7ec-0ubuntu1) UNRELEASED; urgency=medium

  * New upstream snapshot.
    - Makefile: split Python 2 and Python 3 unittest targets apart

 -- Daniel Watkins <oddbloke@ubuntu.com>  Wed, 21 Aug 2019 13:29:50 -0400

curtin (19.2-5-g44997e86-0ubuntu1) eoan; urgency=medium

  * New upstream snapshot.
    - Switch to the new btrfs-progs package name, with btrfs-tools fallback.
      [Dimitri John Ledkov]
    - vmtest: bump ram size on Zfs tests for Disco and Eoan
    - vmtest: drop Cosmic test cases
    - unittests: mock subp in ChrootableTarget _exit_ test cases
    - util.ChrootableTarget: skip rename of resolv.conf if not present in
      target (LP: #1834382)

 -- Daniel Watkins <oddbloke@ubuntu.com>  Thu, 15 Aug 2019 12:27:10 -0400

curtin (19.2-0ubuntu1) eoan; urgency=medium

  * New upstream release.
    - Release 19.2 (LP: #1836951)
    - storage_config: a missing ID_PART_TABLE_TYPE key means no ptable
      [Michael Hudson-Doyle]
    - vmtests: drop skip_by_date decorators for bug 1813228
    - block: Add opportunistic zkey encryption if supported
    - vmtests: add support for CURTIN_VMTEST_APT_PROXY
    - vmtests: add use of CURTIN_VMTEST_ prefixed envvars to image sync
    - vmtest: dont raise SkipTest in class definition

 -- Ryan Harper <ryan.harper@canonical.com>  Wed, 17 Jul 2019 15:39:33 -0500

curtin (19.1-7-g37a7a0f4-0ubuntu1) eoan; urgency=medium

  * New upstream snapshot.
    - vmtests: determine block name via dname when verifying volume groups
    - vmtest: add Centos66/Centos70 FromBionic release and re-add tests
    - block-discover: add cli/API for exporting existing storage to config
    - vmtest: refactor test_network code for Eoan
    - curthoooks: disable daemons while reconfiguring mdadm
      [Michael Hudson-Doyle] (LP: #1829325.)
    - mdadm: fix install to existing raid [Michael Hudson-Doyle] (LP: #1830157)
    - apt_proxy env var set but empty => do not setup any proxy
      [Paride Legovini]
