@@ -2,6 +2,7 @@ curtin (19.2-6-g88a1a7ec-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream snapshot.
     - Makefile: split Python 2 and Python 3 unittest targets apart
+  * debian/*: drop python-curtin, making the package Python 3-only.
 
  -- Daniel Watkins <oddbloke@ubuntu.com>  Wed, 21 Aug 2019 13:29:50 -0400
 
